--- a/ImagineAlpha.csproj
+++ b/ImagineAlpha.csproj
@@ -65,6 +65,9 @@
     <Reference Include="Emgu.CV.World">
       <HintPath>..\..\..\..\..\Emgu\emgucv-windesktop 3.1.0.2282\bin\Emgu.CV.World.dll</HintPath>
     </Reference>
+    <Reference Include="OpenCVInter">
+      <HintPath>..\..\OpenCVInter\OpenCVInter\bin\Debug\OpenCVInter.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -82,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DetectFace.cs" />
+    <Compile Include="FaceDetector.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -94,6 +98,8 @@
     <Compile Include="HistogramForm.Designer.cs">
       <DependentUpon>HistogramForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PersonFace.cs" />
+    <Compile Include="PointGenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
